@@ -83,7 +83,7 @@ public final class BayesUtils {
     }
 
     Vector perlabelThetaNormalizer = scoresPerLabel.like();
-    /* for (Pair<Text,VectorWritable> entry : new SequenceFileDirIterable<Text,VectorWritable>(
+     for (Pair<Text,VectorWritable> entry : new SequenceFileDirIterable<Text,VectorWritable>(
         new Path(base, TrainNaiveBayesJob.THETAS), PathType.LIST, PathFilters.partFilter(), conf)) {
       if (entry.getFirst().toString().equals(TrainNaiveBayesJob.LABEL_THETA_NORMALIZER)) {
         perlabelThetaNormalizer = entry.getSecond().get();
@@ -91,7 +91,7 @@ public final class BayesUtils {
     }
 
     Preconditions.checkNotNull(perlabelThetaNormalizer);
-    */
+    
     return new NaiveBayesModel(scoresPerLabelAndFeature, scoresPerFeature, scoresPerLabel, perlabelThetaNormalizer,
         alphaI);
   }
