@@ -6,6 +6,8 @@ Release 1.0 - unreleased
 
   MAHOUT-1508: Performance problems with sparse matrices (ssc)
 
+  MAHOUT-1504: Enable/fix thetaSummer job in TrainNaiveBayesJob (Andrew Palumbo, smarthi)
+
   MAHOUT-1503: TestNaiveBayesDriver fails in sequential mode (Andrew Palumbo, smarthi)
 
   MAHOUT-1501: ClusterOutputPostProcessorDriver has private default constructor (ssc)
